--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             name="twitter:image"
             content="https://lovable.dev/opengraph-image-p98pqg.png"
         />
+        <link rel="preload" as="image" href="/public/myImage.jpg" />
     </head>
 
     <body>
