new updated index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             property="og:description"
             content="Creative and modern portfolio of Satyam, showcasing full stack and DevOps work."
         />
-        <meta property="og:image" content="/public/myImage.webp" />
+        <meta property="og:image" content="/myImage.webp" />
         <meta
             property="og:url"
             content="https://www.youtube.com/@10bitCoding"
@@ -42,13 +42,13 @@
             name="twitter:description"
             content="Creative and modern portfolio of Satyam, showcasing full stack and DevOps work."
         />
-        <meta name="twitter:image" content="/public/myImage.webp" />
+        <meta name="twitter:image" content="/myImage.webp" />
 
         <!-- Favicon -->
         <!-- <link rel="icon" href="/public/favicon.ico" type="image/x-icon" /> -->
 
         <!-- Preload Main Image -->
-        <link rel="preload" as="image" href="/public/myImage.webp" />
+        <link rel="preload" as="image" href="/myImage.webp" />
     </head>
 
     <body>
